cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(images)
add_executable( loadDisplaySave src/chapter1/loadDisplaySave.cpp )
#add_executable( mat mat.cpp )
#add_executable( logo logo.cpp )
target_link_libraries( loadDisplaySave ${OpenCV_LIBS} )
#target_link_libraries( mat ${OpenCV_LIBS} )
#target_link_libraries( logo ${OpenCV_LIBS} )
